Closed
Bug 1358447
Opened 9 years ago
Closed 8 years ago
Elements which do not support aria-checked="mixed" should not expose "checked" accessibility state
Categories
(Core :: Disability Access APIs, defect)
Tracking
()
RESOLVED
FIXED
mozilla56
| Tracking | Status | |
|---|---|---|
| firefox56 | --- | fixed |
People
(Reporter: jdiggs, Assigned: jdiggs)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
|
10.37 KB,
patch
|
MarcoZ
:
review+
|
Details | Diff | Splinter Review |
Steps to reproduce:
1. Load data:text/html,<div role="switch" aria-checked="mixed" tabindex="0">power</div>
2. Use Accerciser to examine the element
Expected results: the element would lack STATE_CHECKED
Actual results: the element has STATE_CHECKED
The ARIA spec states, "The aria-checked attribute of a switch indicates whether the input is on (true) or off (false). The mixed value is invalid, and user agents must treat a mixed value as equivalent to false for this role." See https://rawgit.com/w3c/aria/master/aria/aria.html#switch
| Assignee | ||
Comment 1•8 years ago
|
||
Updating the summary. The ARIA spec also states:
> The mixed value is not supported on radio, menuitemradio, switch or any element that inherits from these in the taxonomy, and user agents must treat a mixed value as equivalent to false for those roles.
See https://rawgit.com/w3c/aria/master/aria/aria.html#aria-checked.
Further testing shows that the "checked" accessibility state is also being exposed when aria-checked="mixed" is set on a radio or menuitemradio. In addition, this is also happening in Windows. (In macOS, I'm getting incorrect values, including for aria-checked="true", for non-native inputs. I'll look into that in a bit and either add it to this bug or open a new bug.)
Summary: Elements with aria-checked="mixed" and role="switch" should not expose ATK_STATE_CHECKED → Elements which do not support aria-checked="mixed" should not expose "checked" accessibility state
| Assignee | ||
Comment 2•8 years ago
|
||
Comment 3•8 years ago
|
||
Comment on attachment 8883150 [details] [diff] [review]
proposed patch
Thanks! r=me.
Attachment #8883150 -
Flags: review?(mzehe) → review+
| Assignee | ||
Updated•8 years ago
|
Keywords: checkin-needed
Pushed by cbook@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/a48987725783
Elements which do not support aria-checked="mixed" should not expose "checked" accessibility state. r=marcoz
Keywords: checkin-needed
Comment 5•8 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
status-firefox56:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla56
You need to log in
before you can comment on or make changes to this bug.
Description
•