Bug 1358447 - Elements which do not support aria-checked="mixed" should not expose "checked" accessibility state. r=marcoz Treat an author-provided value of "mixed" as the equivalent of "false" for ARIA roles which do not support the "mixed" state on a given property.